# cascade-nix

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  flake.nix  maskfile.md  scratchpad.md  shell.nix  treefmt.nix
.cursor/rules/: general.mdc
cpp/: CMakeLists.txt
cpp/cad/: CMakeLists.txt
cpp/cad/adapters/cad-model-reader/fake/: FakeCadModelReaderAdapter.cpp  FakeCadModelReaderAdapter.hpp
cpp/cad/adapters/cad-model-reader/json/: JsonCadModelReaderAdapter.cpp  JsonCadModelReaderAdapter.hpp
cpp/cad/adapters/cad-model-reader/opencascade/: OpenCascadeCadModelReaderAdapter.cpp  OpenCascadeCadModelReaderAdapter.hpp
cpp/cad/adapters/fake/: FakeCadModelReaderAdapter.cpp  FakeCadModelReaderAdapter.hpp  FakeLoggerAdapter.cpp  FakeLoggerAdapter.hpp  FakeModelDataSourceAdapter.cpp  FakeModelDataSourceAdapter.hpp
cpp/cad/adapters/logger/fake/: FakeLoggerAdapter.cpp  FakeLoggerAdapter.hpp
cpp/cad/adapters/logger/spdlog/: SpdlogAdapter.cpp
cpp/cad/adapters/model-data-source/fake/: FakeModelDataSourceAdapter.cpp  FakeModelDataSourceAdapter.hpp
cpp/cad/adapters/model-data-source/file/: FileModelDataSourceAdapter.cpp  FileModelDataSourceAdapter.hpp
cpp/cad/adapters/model-data-source/json/: JsonModelDataSourceAdapter.cpp  JsonModelDataSourceAdapter.hpp
cpp/cad/adapters/spdlog/: SpdlogAdapter.cpp  SpdlogAdapter.hpp
cpp/cad/app/cli/: Formatter.cpp  Formatter.hpp  main.cpp
cpp/cad/core/domain/: Assembly.hpp  Identifiers.hpp  Model.hpp  Part.hpp
cpp/cad/core/ports/: CadModelReaderPort.hpp  LoggerPort.hpp  ModelDataSourcePort.hpp
cpp/cad/core/usecase/: ListModelPartsUseCase.cpp  ListModelPartsUseCase.hpp
cpp/test/: CMakeLists.txt
cpp/test/adapters/: SpdlogAdapter.test.cpp
cpp/test/cad-model-reader/: JsonCadModelReaderAdapter.test.cpp  OpenCascadeCadModelReaderAdapter.test.cpp
cpp/test/logger/: SpdlogAdapter.test.cpp
cpp/test/model-data-source/: JsonModelDataSourceAdapter.test.cpp
cpp/test/usecase/: ListModelPartsUseCase.test.cpp
test-data/: ExampleBallValve.step  LEGOMAN.step  README.md  complex_model.json  simple_model.json
tests/: CMakeLists.txt
tests/usecase/: ListModelPartsUseCase.test.cpp
